# polimi-casca-todaes2018

./: .gitignore  README.md  gen256hyps.sh  makefile  masked-sbox.cabal  stack.yaml
Backend/CLaSH/: Operators.hs
Backend/CLaSH/Eval/: EvalCheck.hs  EvalMasked.hs  EvalMaskedConst.hs  EvalUnmasked.hs
Backend/CLaSH/Eval/Keccak/: EvalKeccak.hs  HLSimCheck.hs
Backend/MaskProp/: Operators.hs
Backend/MaskProp/Eval/: EvalMasked.hs
Backend/SBV/: Operators.hs
Backend/SBV/Eval/: EvalMasked.hs  EvalUnmasked.hs
Backend/SBV/Eval/Keccak/: EvalKeccak.hs
Backend/SBV/_wip/: Operators2.hs  SWord4.hs
Backend/Trace/: Operators.hs  Probe.hs  README.md
Backend/Trace/Eval/: Properties.hs  Trace.hs
Backend/Trace/_obsolete/: Debug.hs  Graph.hs  Graph2.hs  TraceIO.hs  TraceIO2.hs  TraceWriter.hs
Backend/_obsolete/AST/: AstRepr.hs  Benchmarks.md  EvalAstRepr.hs  EvalAstReprBench.hs  EvalCount.hs  ViewAstRepr.hs
Backend/_obsolete/PPrint/: Operators.hs
Backend/_obsolete/PPrint/Test/: Test.hs
Language/: Operators.hs
Primitives/: MaskedGFInv.hs  MaskedSBOX.hs  Math.hs  Math22.hs  UnmaskedSBOX.hs  WolkerstorferGFInvConst.hs
Primitives/Broken/: MaskedGFInv.hs
Primitives/Papers/: Keccak.hs  Todaes2017.hs
SynthTools/: .gitignore  synthesize_keccak.ys
sbox/: Makefile  sbox.c  sbox.h  sbox_driver  sbox_driver.c
